@@ -1,3 +1,8 @@
+2001-03-05  Elliot Glaysher <nuriko.chan@home.com>
+
+	* netcomics: Added -G, which puts all RLI information into one
+	file. Thanks for massive help from Ben on this one.
+
 2001-03-04  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>
 
 	* netcomics: Updated formatting to reduce number of lines
